adding validation + logic of uploading imgs